# burd

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
docs/: CLI.md  UPDATE_SYSTEM.md  (+4 more)
src-tauri/: Cargo.toml  services.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/helper/: com.burd.helper.plist  main.rs
src-tauri/icons/: icon.icns
src-tauri/src/: api_client.rs  binary.rs  caddy.rs  constants.rs  dns.rs  domain.rs  drivers.rs  error.rs  helper_client.rs  launchd.rs  lib.rs  lock_utils.rs  logs.rs  mail_notifier.rs  main.rs  nvm.rs  park.rs  park_watcher.rs  pm2.rs  process.rs  proxy.rs  pvm.rs  resolver.rs  service_config.rs  test_utils.rs  tinker.rs  tray.rs  tunnel.rs  validation.rs
src-tauri/src/analyzer/: detector.rs  mod.rs  parsers.rs  types.rs
src-tauri/src/api/: mod.rs  state.rs  types.rs
src-tauri/src/api/handlers/: databases.rs  domains.rs  instances.rs  mail.rs  mod.rs  services.rs  status.rs
src-tauri/src/cli/: analyze.rs  db.rs  doctor.rs  env.rs  init.rs  lifecycle.rs  link.rs  logs.rs  mcp.rs  mod.rs  mysql.rs  new.rs  open.rs  park.rs  postgres.rs  proxy.rs  secure.rs  services.rs  setup.rs  share.rs  update_instance.rs  upgrade.rs
src-tauri/src/commands/: dns.rs  domains.rs  instances.rs  logs.rs  mail.rs  mod.rs  node.rs  park.rs  php.rs  proxy.rs  services.rs  stacks.rs  system.rs  tinker.rs  tunnels.rs
src-tauri/src/config/: mod.rs  models.rs  paths.rs  store.rs
src-tauri/src/db_manager/: mariadb.rs  mod.rs  postgres.rs
src-tauri/src/mcp/: client.rs  mod.rs  protocol.rs  server.rs  tools.rs
src-tauri/src/services/: beanstalkd.rs  bun.rs  centrifugo.rs  frankenphp.rs  frankenphp_park.rs  frpc.rs  gitea.rs  key_value_service.rs  mailpit.rs  mariadb.rs  meilisearch.rs  memcached.rs  minio.rs  mod.rs  mongodb.rs  mysql.rs  nodered.rs  postgresql.rs  redis.rs  typesense.rs  valkey.rs
(+40 files in other folders)
