[package]
name = "burd"
version = "1.2.4"
description = "Local Development Environment Manager"
authors = ["you"]
edition = "2021"
default-run = "burd-app"

[lib]
name = "burd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "burd-app"
path = "src/main.rs"

[[bin]]
name = "burd"
path = "src/bin/burd.rs"

[[bin]]
name = "burd-helper"
path = "helper/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
clap = { version = "4", features = ["derive"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.6"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
futures-util = "0.3"
flate2 = "1"
tar = "0.4"
regex = "1"

# DNS server
hickory-server = "0.24"
hickory-proto = "0.24"

# HTTP reverse proxy
axum = "0.7"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"

# Domain slug generation
slug = "0.1"

# File system watcher for park directories
notify = "6"
notify-debouncer-mini = "0.4"

# Random number generation
rand = "0.9.2"

# URL encoding
urlencoding = "2"

# URL parsing (for DATABASE_URL)
url = "2"

# WebSocket client for Mailpit notifications
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }

# Unix-specific features
libc = "0.2.178"

# Custom driver system
once_cell = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"

